# kserde

./: .gitignore  Cargo.toml  test.json
examples/: custom_serialize.rs  custom_serialize_deserialize.rs  hello.json  hello.rs  read_and_write.rs
kserde_derive_impl/: Cargo.toml
kserde_derive_impl/src/: lib.rs
src/: deserialize_trait.rs  lib.rs  serialize_trait.rs  thing.rs  to_string.rs
src/json/: json_deserialize.rs  json_serialize.rs  value.rs
tests/: json_test_suite.rs
